Вычистил корзину и желания Перевёл на CBV

--- a/adminapp/templates/adminapp/categories.html
+++ b/adminapp/templates/adminapp/categories.html
@@ -13,7 +13,7 @@
     <div class="category_record">
         {% if not object.is_active %}
         <strike> не активна </strike>
-        {% endif %}">
+        {% endif %}
         <div class="category_name">
             {{ object.title|title }}
         </div>
