--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -2,28 +2,31 @@
 
 <!DOCTYPE html>
 <html lang="ru">
-    <!-- Bootstrap CSS
-    ============================================ -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- Font awesome CSS
-    ============================================ -->
+<!-- Bootstrap CSS
+============================================ -->
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<!-- Font awesome CSS
+============================================ -->
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>
+        {% block page_title %}
+        {% endblock %}
+    </title>
 </head>
 <body>
-  <div class="admin_container">
+<div class="admin_container">
     <div class="h2 text-center head">
-      Админка
+        Админка
     </div>
     {% block menu %}
-      <div class="admin_menu">
+    <div class="admin_menu">
         {% include 'adminapp/includes/inc_menu.html' %}
-      </div>
+    </div>
     {% endblock %}
 
     {% block content %}
     {% endblock %}
-  </div>
+</div>
 </body>
 </html>
