--- a/adminapp/templates/adminapp/categories.html
+++ b/adminapp/templates/adminapp/categories.html
@@ -1,6 +1,8 @@
 {% extends 'adminapp/base.html' %}
 {% load staticfiles %}
-
+{% block page_title %}
+{{ title }}
+{% endblock %}
 {% block content %}
 <div class="categories_list">
     <button class="new_category">
@@ -9,7 +11,7 @@
         </a>
     </button>
 
-    {% for object in objects %}
+    {% for object in object_list %}
     <div class="category_record">
         {% if not object.is_active %}
         <strike> не активна </strike>
