--- a/adminapp/templates/adminapp/user_update.html
+++ b/adminapp/templates/adminapp/user_update.html
@@ -1,16 +1,19 @@
-
 {% extends 'adminapp/base.html' %}
 {% load static %}
 
+{% block page_title %}
+{{ title }}
+{% endblock %}
+
 {% block content %}
-  <form class="form-horizontal" method="post" enctype="multipart/form-data">
+<form class="form-horizontal" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ update_form.as_p }}
+    {{ form.as_p }}
     <input class="form-control" type="submit" value="сохранить">
-  </form>
-  <button class="btn btn-round form-control last">
+</form>
+<button class="btn btn-round form-control last">
     <a href="{% url 'adminapp:users' %}">
-      к списку пользователей
+        к списку пользователей
     </a>
-  </button>
+</button>
 {% endblock %}
