--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -1,6 +1,8 @@
 {% extends 'adminapp/base.html' %}
 {% load static %}
-
+{% block page_title %}
+{{ title }}
+{% endblock %}
 {% block content %}
   <div class="users_list">
     <button class="new_user">
