--- a/adminapp/templates/adminapp/product_delete.html
+++ b/adminapp/templates/adminapp/product_delete.html
@@ -1,17 +1,20 @@
 {% extends 'adminapp/base.html' %}
 {% load static %}
 
+{% block page_title %}
+{{ title }}
+{% endblock %}
 
 {% block content %}
   <div class="user_delete">
-    Уверены, что хотите удалить {{ product_to_delete.title }} ?
-    <form action="{% url 'adminapp:product_delete' product_to_delete.pk %}"
+    Уверены, что хотите удалить {{ object.title }} ?
+    <form action="{% url 'adminapp:product_delete'  object.pk %}"
           method="post">
       {% csrf_token %}
       <input class="btn btn-danger" type="submit" value="удалить">
     </form>
     <button class="btn btn-success">
-      <a href="{% url 'adminapp:products' product_to_delete.category.pk %}">
+      <a href="{% url 'adminapp:products' object.category.pk %}">
         Отмена
       </a>
     </button>
