--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -1,6 +1,9 @@
 
 {% extends 'adminapp/base.html' %}
 {% load static %}
+{% block page_title %}
+{{ title }}
+{% endblock %}
 
 {% block content %}
   <div class="products_list">
@@ -10,7 +13,7 @@
       </a>
     </button>
 		
-    {% for object in objects %}
+    {% for object in object_list %}
       <div class="product_record">
         <img 
           src="/media/{{object.image|default:'products_images/default.png'}}"
