--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -10,8 +10,9 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        {% block page_title %}
-        {% endblock %}
+{% block page_title %}
+{{ title }}
+{% endblock %}
     </title>
 </head>
 <body>
