--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -1,26 +1,39 @@
 <ul class="menu">
-  <li>
-    <a href="{% url 'mainapp:main' %}">
-      на сайт
-    </a>
-  </li>
-  <li>
-    <a href="{% url 'adminapp:users' %}"
-       class="{% if request.resolver_match.url_name == 'users' %}
+    <li>
+        <a href="{% url 'mainapp:main' %}">
+            на сайт
+        </a>
+    </li>
+    <li>
+        <a href="/admin/">
+            Админка Django
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'adminapp:users' %}"
+           class="{% if request.resolver_match.url_name == 'users' %}
                 active
               {% endif %}">
-      пользователи
-    </a>
-  </li>
-  <li>
-    <a href="{% url 'adminapp:categories' %}"
-       class="{% if request.resolver_match.url_name == 'categories' or category.title %}
+            Пользователи
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'adminapp:categories' %}"
+           class="{% if request.resolver_match.url_name == 'categories' or category.title %}
                 active
               {% endif %}">
-      категории
-      {% if category %}
-        :<span>{{ category.title }}</span>
-      {% endif %}
-    </a>
-  </li>
+            Категории
+            {% if category %}
+            :<span>{{ category.title }}</span>
+            {% endif %}
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'adminapp:orders' %}"
+           class="{% if request.resolver_match.url_name == 'orders' %}
+                active
+              {% endif %}">
+            Заказы
+        </a>
+    </li>
 </ul>
