--- a/adminapp/templates/adminapp/order_update.html
+++ b/adminapp/templates/adminapp/order_update.html
@@ -7,8 +7,8 @@
     <input class="form-control" type="submit" value="сохранить">
 </form>
 <button class="btn btn-round form-control last">
-    <a href="{% url 'adminapp:users' %}">
-        к списку пользователей
+    <a href="{% url 'adminapp:orders' %}">
+        к списку заказов
     </a>
 </button>
 {% endblock %}
