--- a/mainapp/templates/mainapp/master_pages/master.html
+++ b/mainapp/templates/mainapp/master_pages/master.html
@@ -64,7 +64,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="top-menu">
-                        <p class="welcome-msg">Добро пожаловать в проект "созданиие сайта"</p>
+                        <p class="welcome-msg">Добро пожаловать в проект "создание сайта"</p>
                     </div>
                     <!-- Start Top-Link -->
                     <div class="top-link">
