Доделал кэширование. Доделал 7ое ДЗ

--- a/cartapp/templates/cartapp/cart_list.html
+++ b/cartapp/templates/cartapp/cart_list.html
@@ -44,12 +44,10 @@
 {% endblock %}
 
 
-{% block brand_area %}
-бренды тут
-{% endblock%}
+
 
 
 {% block jsscripts %}
-<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<!--<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>-->
 <script src="{% static 'js/cart_scripts.js' %}"></script>
 {% endblock%}
